<?xml version="1.0" encoding="utf-8"?>
<resources>
    

    
    <string name="app_name">StudyWithMe</string>
    
    
    <string name="group_admin">Admin:</string>
    <string name="group_room">Room:</string>
    <string name="group_time">Time:</string>
    <string name="group_date">Date:</string>
    <string name="implemeting">Implementing</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="university">University</string>
    <string name="major">Major</string>

    <!-- login -->
    <string name="start">Start</string>
    <string name="account">Account</string>
    <string name="account_hint">Email</string>
    <string name="psw">Password</string>
    <string name="psw_hint">初始密码为账号后六位</string>
    <string name="loss_psw">Loss Password</string>
	<string name="error_account_pasword">Account Or Password Error</string>
    <string name="login">Login</string>
    <string name="login_ing">Logining</string>
    <!-- left_fragment -->
    <string name="login_hint">Click</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifition">Nofitication</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mygroups">MyGroups</string>
    <string name="menu_freeroom">FreeRooms</string>
   

    <!-- xListview -->
    <string name="xlistview_header_hint_normal">Pull Refresh </string>
    <string name="xlistview_header_hint_ready">Loosen Refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last Update：</string>
    <string name="xlistview_footer_hint_normal">Load More</string>
    <string name="xlistview_footer_hint_ready">Loosen Load More</string>

    <!-- 常用资源 -->
    <string name="about">About</string>
    <string name="home">HOME</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>

    <!-- 发布页面资源 -->
    <string name="already_select">已选0张</string>
    <string name="local_photo">Local Photos</string>
    <string name="take_photo">Take Photos</string>
    <string name="send_space">Post</string>
    <string name="send_ing">Sending</string>
    <string name="photo_none">No photos</string>
<!--     <string name="publish_ing">发送中</string> -->
    <string name="sure">Yes</string>
    <string name="finish">Finished</string>
    <string name="title">Title</string>
    <string name="title_hint">Title(35 words)</string>
    <string name="content">Content</string>
    <string name="photo">Photo</string>
    <string name="save_drafts">存草稿</string>
    <string name="select_album">Select Album</string>

    <!-- dialog -->
    <string name="prompt">Prompt</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="main_body">Body</string>
    <string name="update_message">当前版本1.0 发现新版本%s 是否更新？</string>
    <string name="cleanCache_message">有%sM的缓存，立即清除？</string>
    <!-- setting -->
    <string name="sound_remind">声音提醒</string>
    <string name="auto_login">自动登录</string>
    <string name="auto_update">自动更新</string>
    <string name="opinion_revise_mail">邮箱绑定</string>
    <string name="opinion_revise_psw">修改密码</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="opinion_feedback_hint">请填写您的宝贵意见（150字以内）...</string>
    <string name="error_opinion_null">意见不能为空</string>
    <string name="error_opinion_tolong">意见不能超过150字!</string>
    <string name="error_comment_tolong">评论不能超过150字!</string>
    <string name="exit_login">Logout</string>
    <string name="exit_question">Exit？</string>
    <string name="version">v1.0</string>
    <string name="current_version">已是最新版本</string>
    <string name="develop_team">开发团队</string>
    <string name="team">IGP</string>
    <!-- setting -->
    <string name="setting">设   置</string>
    <string name="logout">退出</string>
    <string name="update">检测更新</string>
    <string name="cleanCache">清除缓存</string>
    <string name="share">分 享</string>
    <string name="delete">删除</string>
    <string name="none_groups">暂无小组</string>
    <string name="none_follow">暂无关注</string>
    <string name="none_drafts">暂无草稿</string>
    <string name="none_fans">暂无粉丝</string>
    <!-- 个人信息页面资源 -->
    <string name="my_follow">我的关注</string>
    <string name="my_comment">我的评论</string>
    <string name="my_post">我的帖子</string>
    <string name="my_fans">我的粉丝</string>
    <string name="follow">添加关注</string>
    <string name="follow_cancel">取消关注</string>
    <string name="fans">粉丝：</string>
    <string name="post">Post</string>
    <string name="follower">关注：</string>
    <string name="user_resume">简介：</string>
    <string name="revise_info">修改资料</string>
    
    <string name="detail">详情</string>
    <string name="revise_img">自定义头像</string>
    <string name="name">Name</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="name_hint">姓名:</string>
    <string name="intro_hint">简介:</string>
    <string name="now_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    
    <!-- newsdetail资源 -->
    <string name="comment">评论</string>
    <string name="comment_l">评论了</string>
    <string name="want_comment">Comment</string>
    <string name="none_comment">暂无评论</string>
    <string name="all_comment">全部评论</string>
    <string name="replay">回复</string>
    <string name="reply_hint">回复:</string>
    <string name="my_created">CREATED</string> 
    <string name="my_joined">JOINED</string>
    <string name="say_sth">说点什么吧...</string>
    
    <string name="please_wait">请稍后</string>
    <string name="net_error">网络请求失败,请稍后重试</string>
    <string name="refresh">刷新</string>
    <string name="no_data">什么也没有啊</string>
    <string name="me">Me</string>
    <string name="saving">Saving</string>
    <string name="search">Search</string>
    <string name="addfollow">加关注</string>
    
    <string name="please_login">请先登录</string>
    <string name="wait_send">请稍等，还有帖子正在发布中</string>
    <string name="success_send">帖子发布成功</string>
    <string name="success_opinion">意见反馈成功</string>
    <string name="fail_send">帖子发布失败！</string>
    <string name="null_fans">还没有人关注你哦</string>
    <string name="error_sdcard_null">sd卡不存在或不可用</string>
    <string name="error_comment_null">回复内容不能为空哦</string>
    <string name="error_news_null">标题和内容不能为空</string>
    <string name="error_news_tolong">标题不能超过35个字</string>
    <string name="error_account_pasword_null">账号或密码不能为空</string>
    <string name="error_intro_null">简介不能为空哦!</string>
    <string name="error_intro_tolong">简介不能超过35个字!</string>
    <string name="error_pic_tomuch">不能超过8张图片!</string>
    <string name="error_email_null">邮箱不能为空哦!</string>
    <string name="error_email_format">邮箱格式有误!</string>
    <string name="error_password_format">密码格式有误!</string>
    <string name="success_eamil_save">邮箱更改成功</string>
    <string name="success_password_save">密码更改成功</string>
    <string name="success_collect">收藏成功</string>
    <string name="success_intro">修改成功</string>
    <string name="success_drafts">草稿保存成功</string>
    <string name="fail_email_save">邮箱更改失败,请仔细检查密码和邮箱格式!</string>
    <string name="fail_eamil_exist">更改该邮箱被占用！</string>
    <string name="fail_password_pre">原始密码错误!</string>
    <string name="fail_password_save">密码更改失败!</string>
    <string name="error_data_null">请仔细填写新密码和原始密码!</string>
    <string name="error_password_not_same">两次密码不一致!</string>
    <string name="exit_title">Exit ?</string>
    <string name="collect">Collect</string>
    <string name="subject">Subject</string>
    <string name="groupname">GroupName</string>
    <string name="create">Create</string>
    <string name="room">Room</string>
</resources>