<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bj"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/register_back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/back_layout_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:background="@drawable/arrow_back"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="6.0dip"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="SignUp"
            android:paddingLeft="10dp"
            android:textColor="@drawable/textview_selector"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_firstname"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/first_name"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/user_lastname"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="2"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/last_name"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_password"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/university"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <Spinner
            android:id="@+id/university_spinner"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@color/white"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_major"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/major"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--
             <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:background="@drawable/btn_selector"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
        -->


        <!--
             <Button
            android:id="@+id/register_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:background="@drawable/btn_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
        -->
    </RelativeLayout>

</LinearLayout>