<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@color/main"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="0.0px" >

                <LinearLayout
                    android:id="@+id/edit_back_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:background="@drawable/back_layout_selector"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/arrow_back"
                        android:gravity="center"
                        android:includeFontPadding="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingLeft="6.0dip"
                        android:singleLine="true"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:layout_marginRight="10dp"
                        android:textSize="@dimen/medium_text_size" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="edit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/title_hint_drafts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/title_hint"
                    android:padding="5dip" />

                <EditText
                    android:id="@+id/content_edt_drafts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_hint_drafts"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top"
                    android:hint="@string/content"
                    android:minLines="5"
                    android:padding="5dip" />


                <com.app.swm.widget.NoScrollGridView
                    android:id="@+id/gridview_drafts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_edt_drafts"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/edit_text_bg"
                    android:columnWidth="80dp"
                    android:gravity="center"
                    android:horizontalSpacing="5dp"
                    android:listSelector="@color/transparent"
                    android:numColumns="auto_fit"
                    android:padding="5dip"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp" />

                <TextView
                    android:id="@+id/submit_txt2_drafts"
                    android:layout_width="wrap_content"
                    android:minWidth="90dip"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/gridview_drafts"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/save_btn_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="0dip"
                    android:paddingRight="0dip"
                    android:text="@string/send_space"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text_size" />

                <TextView
                    android:id="@+id/tv_save_drafts_edite"
                    android:layout_width="wrap_content"
                    android:minWidth="90dip"
                    android:singleLine="true"
                    android:paddingLeft="0dip"
                    android:paddingRight="0dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gridview_drafts"
                    android:layout_marginRight="25dip"
                    android:layout_marginTop="10dip"
                    android:layout_toLeftOf="@id/submit_txt2_drafts"
                    android:background="@drawable/drafts_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/save_drafts"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>