<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bj"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/add_group_back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/back_layout_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:background="@drawable/arrow_back"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="6.0dip"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/add_group_post"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="20dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/post"
            android:textColor="@drawable/textview_selector"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/subject"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <Spinner
            android:id="@+id/add_group_subject_spinner"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@color/white"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_group_name"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="2"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="@string/groupname"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_select_date"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="30dip"
            android:text="Date"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/group_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:text="2015 03 02"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_select_time"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="30dip"
            android:text="Time"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/group_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:text="11:30"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_group_description"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="Description"
            android:lines="3"
            android:paddingLeft="30dip"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_group_peopleNum"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_weight="3"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:hint="People Num"
            android:paddingLeft="30dip"
            android:singleLine="true"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <Spinner
            android:id="@+id/add_group_room_spinner"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="5dp" />
    </LinearLayout>

</LinearLayout>